# cpp-experiments

./: .gitignore  CMakeLists.txt  LICENSE  README.md  external_deps.cmake
experiments/: CMakeLists.txt
experiments/delegate/: delegate_types.cpp  delegate_types.h  main.cpp
experiments/hello_world/: main.cpp
experiments/memory_pool/: main.cpp
experiments/memory_pool_benchmark/: main.cpp  main.h
experiments/raylib_hello_world/: main.cpp
experiments/sokol_hello_world/: main.cpp  main.h
experiments/threading_std/: async_stess_test.cpp  main.cpp  main.h
experiments/threading_tasks/: main.cpp  main.h  tasks_enkits.cpp
shared_stuff/: CMakeLists.txt
shared_stuff/memory/: memory_allocator.h  memory_pool.cpp  memory_pool.h  memory_poolable.cpp  memory_poolable.h  memory_rcptr.h  memory_reference_counted.cpp  memory_reference_counted.h  memory_settings.h  memory_tptr.h  memory_wptr.h
shared_stuff/memory/internal/: memory_pool_bucket.cpp  memory_pool_bucket.h  memory_pool_settings.cpp  memory_pool_settings.h
shared_stuff/test/: test_func.cpp  test_func.h
shared_stuff/utils/: delegate.h  utils_cast.h
tests/: CMakeLists.txt  tests_main.cpp  tests_refcount_pointers.cpp
