add_library(shared_stuff STATIC test/test_func.h test/test_func.cpp memory/memory_pool.h memory/memory_pool.cpp memory/internal/memory_pool_bucket.cpp memory/internal/memory_pool_bucket.h memory/memory_poolable.h memory/memory_poolable.cpp)
target_include_directories(shared_stuff PUBLIC test memory)